<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:foreground="?android:attr/selectableItemBackgroundBorderless">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="28dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabelText="@string/user_name"
            app:met_floatingLabel="highlight"
            android:textSize="18sp"
            android:hint="@string/user_name"
            android:singleLine="true"
            android:layout_marginBottom="18dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabelText="@string/user_pass"
            app:met_floatingLabel="highlight"
            android:textSize="18sp"
            android:hint="@string/user_pass"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginBottom="18dp"/>

        <Button
            android:id="@+id/login_ok"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_forget_pass"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/register"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_add"
                android:textSize="13sp"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>